# kafka-field-extractor

./: .kfe.json  Cargo.toml
src/: constants.rs  kafka.rs  main.rs  model.rs
