[package]
name = "kfe"
version = "0.1.0"
edition = "2021"
authors = ["VBondarchuk"]
description = "Kafka field extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
dirs = { version = "5.0.1" }
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = { version = "1.0.113" }
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl"] }
apache-avro = { version = "0.16.0" }
schema_registry_converter = { version = "4.0.0" }
open = { version = "5.0.1" }